<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="end"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray2"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_label_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_orden"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_4"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_label_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/label_total"
            android:textColor="@color/black1"
            android:textSize="@dimen/text_size_4"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total"
            app:layout_constraintEnd_toStartOf="@+id/tv_total"
            app:layout_constraintTop_toTopOf="@+id/tv_total" />

        <TextView
            android:id="@+id/tv_total"
            tools:text="$1500.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black1"
            android:textSize="@dimen/text_size_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_products_order"
            tools:itemCount="6"
            tools:listitem="@layout/item_order_product"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/container_btns"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_order"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/container_btns"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btn_print_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/label_edit"
                android:textSize="@dimen/text_size_2"
                app:cornerRadius="12dp"
                app:icon="@drawable/ic_edit"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toTopOf="@+id/btn_print_order" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red1"
                android:text="@string/label_cancel_order"
                android:textSize="@dimen/text_size_2"
                app:cornerRadius="12dp"
                app:icon="@drawable/ic_cancel"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="@id/btn_edit_order"
                app:layout_constraintStart_toEndOf="@id/btn_edit_order"
                app:layout_constraintTop_toTopOf="@+id/btn_edit_order" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_print_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue3"
            android:text="@string/label_print_order"
            android:textSize="@dimen/text_size_2"
            app:cornerRadius="12dp"
            app:icon="@drawable/ic_print"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@+id/btn_take_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_take_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green1"
            android:text="@string/label_take_order"
            android:textSize="@dimen/text_size_2"
            app:cornerRadius="12dp"
            app:icon="@drawable/ic_money"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.navigation.NavigationView>