<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black1"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/label_papiz"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_label_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:text="Miercoles 16 de noviembre de 2023" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/label_delivery_orders" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/container_nav_bar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_toolbar">

        <include
            android:id="@+id/nav_bar"
            layout="@layout/custom_nav_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.cardview.widget.CardView
        android:id="@+id/container_rv_orders"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_marginEnd="12dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_order"
        app:layout_constraintEnd_toEndOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/container_nav_bar"
        app:layout_constraintTop_toBottomOf="@+id/top_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/tv_label_order_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/label_table_orders"
                android:textColor="@color/black1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_table_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_empty_list"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_table_orders"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:listitem="@layout/item_order" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/container_rv_orders"
        app:layout_constraintTop_toBottomOf="@+id/top_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_label_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_order"
                android:textColor="@color/black1"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_orders"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_label_total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_order"
                tools:itemCount="6"
                tools:listitem="@layout/item_order_product" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_empty"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/rv_orders"
                app:layout_constraintLeft_toLeftOf="@+id/rv_orders"
                app:layout_constraintRight_toRightOf="@+id/rv_orders"
                app:layout_constraintTop_toTopOf="@+id/rv_orders"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/empty"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_label_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/label_total"
                android:textColor="@color/black1"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btn_edit_order"
                app:layout_constraintEnd_toStartOf="@+id/tv_total" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black1"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_label_total"
                tools:text="$1500.00" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/label_edit"
                app:cornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_take_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green1"
                android:text="@string/label_take_order"
                app:cornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_print_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/blue3"
                android:text="@string/label_print_order"
                app:cornerRadius="12dp"
                app:layout_constraintStart_toEndOf="@+id/btn_edit_order"
                app:layout_constraintTop_toTopOf="@+id/btn_edit_order" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/blue1"
        android:text="@string/label_new_order"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/container_nav_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>