<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_label_title_cash_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Nuevo ingreso"
        android:textSize="@dimen/text_size_4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="22dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_name_cash_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_title_cash_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="22dp"
        android:layout_marginHorizontal="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_value_cash_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_cash_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_cash_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="8dp"
        android:layout_margin="22dp"
        android:text="@string/label_add"
        app:layout_constraintTop_toBottomOf="@+id/tv_value_cash_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>