<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black1"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/label_papiz"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_label_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="HOME          Miercoles 16 de noviembre de 2023" />

        <ImageButton
            android:id="@+id/btn_refresh"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/label_description_image"
            android:src="@drawable/ic_refresh"
            app:tint="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/label_delivery_orders"
            android:textColor="@color/white" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/container_nav_bar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_toolbar">

        <include
            android:id="@+id/nav_bar"
            layout="@layout/custom_nav_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <androidx.fragment.app.FragmentContainerView
        android:name="androidx.navigation.fragment.NavHostFragment"
        app:navGraph="@navigation/main_navigation"
        app:defaultNavHost="true"
        android:id="@+id/fragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@+id/container_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_toolbar"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>